--- a/portal/app/assets/stylesheets/shared.scss
+++ b/portal/app/assets/stylesheets/shared.scss
@@ -1,8 +1,14 @@
 // css that is shared by all portals
 
-.documents-gallery .document .caption-area .index-document-functions,
-.documents-masonry .document .caption-area .index-document-functions {
-  min-width: 6.8rem;
+.document .index-document-functions {
+  min-width: 9em;
+}
+.documents-list .document .document-thumbnail {
+  margin-bottom: 48px;
+  padding-left: 48px;
+}
+.documents-list .index-metadata-container {
+  clear: right;
 }
 .documents-masonry .document .caption-area {
   clip: rect(0, 0, 0, 0);
@@ -17,6 +23,15 @@
   height: revert-layer;
   margin: revert-layer;
   width: revert-layer;
+}
+.documents-slideshow .grid .document .thumbnail {
+  min-height: 6.25em;
+  min-width: 6.25em;
+  width: 6.25em;
+}
+.documents-slideshow .grid .document .thumbnail img {
+  height: 6.25em;
+  width: 6.25em;
 }
 .documents-slideshow .slideshow-presenter .item .frame>a {
   display: inline-block;
@@ -36,7 +51,28 @@
 .navbar-light .navbar-nav .nav-link.disabled {
   color: rgba(0,0,0,0.6);
 }
-
+.pagination {
+  min-width: 12em;
+  padding-bottom: 0.25em;
+}
+.search-widgets, .sort-pagination {
+  flex-wrap: wrap;
+}
+.search-widgets > * {
+  padding-bottom: 0.25em;
+}
+.search-widgets .view-type .blacklight-icons svg {
+  display: inline-block;
+  height: 1.5em;
+  width: 1.5em;
+}
+.slideshow-presenter .carousel-control {
+  width: 3.125em;
+}
+.slideshow-presenter .controls .blacklight-icons svg {
+  height: 2em;
+  width: 2em;
+}
 .thumbnail > img,
 .thumbnail a > img {
   max-height: 200px;
@@ -63,142 +99,145 @@
 }
 
 @media (min-width: 1200px) {
-    .site_footer .container {
-        max-width: 1140px
-    }
+  .site_footer .container {
+    max-width: 1140px
+  }
 }
 @media (min-width: 768px) {
-    .site_footer .col-md-3:nth-child(3),
-    .site_footer .col-md-3:nth-child(4) {
-        margin-top: 0
-    }
+  .documents-list .index-metadata-container {
+    clear: unset;
+  }
+  .site_footer .col-md-3:nth-child(3),
+  .site_footer .col-md-3:nth-child(4) {
+    margin-top: 0
+  }
 }
 @media (min-width: 576px) {
-    .site_footer {
-        padding: 7% 0
-    }
-    .site_footer .container {
-        max-width: 100%
-    }
-    .site_footer .col-md-3+.col-md-3 {
-        margin-top: 0
-    }
-    .site_footer h3 {
-        margin-top: 10px
-    }
-    // .site_footer .col-md-3:nth-child(3),
-    // .site_footer .col-md-3:nth-child(4) {
-    //     margin-top: 50px
-    // }
-    .site_footer .col-md-3:nth-child(3) a {
-        margin-top: 40px
-    }
+  .site_footer {
+    padding: 7% 0
+  }
+  .site_footer .container {
+    max-width: 100%
+  }
+  .site_footer .col-md-3+.col-md-3 {
+    margin-top: 0
+  }
+  .site_footer h3 {
+    margin-top: 10px
+  }
+  // .site_footer .col-md-3:nth-child(3),
+  // .site_footer .col-md-3:nth-child(4) {
+  //     margin-top: 50px
+  // }
+  .site_footer .col-md-3:nth-child(3) a {
+    margin-top: 40px
+  }
 }
 
 .button:hover {
-    background: #25399E;
-    text-decoration: none;
-    color: white
+  background: #25399E;
+  text-decoration: none;
+  color: white
 }
 .load-more .button:hover {
-    background: #25399E
+  background: #25399E
 }
 a:hover .color_overlay {
-    opacity: 0;
-    -webkit-transition: opacity 300ms;
-    transition: opacity 300ms
+  opacity: 0;
+  -webkit-transition: opacity 300ms;
+  transition: opacity 300ms
 }
 
 .header-top ul li:last-child a:hover {
-    background: #1bdba6;
-    color: #25399E
+  background: #1bdba6;
+  color: #25399E
 }
 
 form .file-label:hover .choose {
-    color: #2ADBA7
+  color: #2ADBA7
 }
 
 p a:hover {
-    text-decoration: none
+  text-decoration: none
 }
 
 .site_footer a:hover {
-    color: #1BDBA6
+  color: #1BDBA6
 }
 .site_footer {
-    color: white;
-    background: #231F20;
-    padding: 15% 10%;
-    margin-top: 0;
+  color: white;
+  background: #231F20;
+  padding: 15% 10%;
+  margin-top: 0;
 }
 .site_footer h3 {
-    margin-bottom: 25px;
-    font-weight: bold
+  margin-bottom: 25px;
+  font-weight: bold
 }
 .site_footer a {
-    color: white
+  color: white
 }
 .site_footer a:hover {
-    color: #1BDBA6;
-    text-decoration: underline
+  color: #1BDBA6;
+  text-decoration: underline
 }
 .site_footer ul {
-    margin-top: 10px;
-    list-style: none
+  margin-top: 10px;
+  list-style: none
 }
 .site_footer ul li+li {
-    margin-top: 20px
+  margin-top: 20px
 }
 .site_footer ul li a {
-    text-decoration: none;
-    font-weight: bold
+  text-decoration: none;
+  font-weight: bold
 }
 .site_footer .col-md-3:nth-child(1) .footer-logo {
-    margin-bottom: 40px
+  margin-bottom: 40px
 }
 .site_footer .col-md-3:nth-child(1) .berkeley-logo {
-    margin-top: 27px;
-    max-width: 180px
+  margin-top: 27px;
+  max-width: 180px
 }
 .site_footer .col-md-3:nth-child(1) .property-of {
-    font-size: 0.875rem
+  font-size: 0.875rem
 }
 .site_footer .col-md-3:nth-child(1) img {
-    margin-top: 0
+  margin-top: 0
 }
 .site_footer .col-md-3:nth-child(3) address {
-    line-height: 1.56
+  line-height: 1.56
 }
 .site_footer .col-md-3:nth-child(3) a {
-    display: inline-block;
-    margin-top: 10px;
-    color: white
+  display: inline-block;
+  margin-top: 10px;
+  color: white
 }
 .site_footer .col-md-3:nth-child(3) a i {
-    font-size: 2rem;
-    vertical-align: middle;
-    margin-right: 20px
+  font-size: 2rem;
+  vertical-align: middle;
+  margin-right: 20px
 }
 .site_footer .col-md-3:nth-child(4) .social {
-    margin-bottom: 50px
+  margin-bottom: 50px
 }
 .site_footer .col-md-3:nth-child(4) .social li {
-    display: inline-block
+  display: inline-block
 }
 .site_footer .col-md-3:nth-child(4) .social li+li {
-    margin-left: 10px;
-    margin-bottom: 5px
+  margin-left: 10px;
+  margin-bottom: 5px
 }
 .site_footer .col-md-3:nth-child(4) .social a {
-    font-size: 1.5rem
+  font-size: 1.5rem
 }
 .site_footer .col-md-3:nth-child(4) .copyright {
-    font-size: 0.75rem;
-    max-width: 200px
+  font-size: 0.75rem;
+  max-width: 200px
 }
 .site_footer .col-md-3:nth-child(4) .copyright a {
-    font-weight: bold;
-    text-decoration: underline
+  font-weight: bold;
+  text-decoration: underline
 }
 
 h1,
